bk_ida/gccida/c1/eval_subst
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3182:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3183:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3185:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3186:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3187:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3188:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3190:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3193:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3194:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3195:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3199:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // [rsp+8h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3202:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tt; // [rsp+10h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3237:16: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v15 = build( ( tree_code)v6, type, v32, v35, v29); 
               ^~~~~~~~~
               tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3237:26: error: expected ')'
v15 = build( ( tree_code)v6, type, v32, v35, v29); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3237:12: note: to match this '('
v15 = build( ( tree_code)v6, type, v32, v35, v29); 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3272:16: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v15 = build( ( tree_code)v6, tt, v19, v10); 
               ^~~~~~~~~
               tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3272:26: error: expected ')'
v15 = build( ( tree_code)v6, tt, v19, v10); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3272:12: note: to match this '('
v15 = build( ( tree_code)v6, tt, v19, v10); 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3278:17: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v15 = build1( ( tree_code)v6, type, v24); 
                ^~~~~~~~~
                tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3278:27: error: expected ')'
v15 = build1( ( tree_code)v6, type, v24); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3278:13: note: to match this '('
v15 = build1( ( tree_code)v6, type, v24); 
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/fold-const.c:3286:16: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v15 = build( ( tree_code)v6, type, v30, v14); 
               ^~~~~~~~~
               tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eval_subst/src/obj/fold-const.o] Error 1
